--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -165,7 +165,7 @@ body {
   left: -100%;
   width: 100%;
   height: 100%;
-  background-color: #E4A12D;
+  background-color: #f3bf66;
   z-index: -1;
   transition: left 0.3s ease;
 }
