--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -174,3 +174,15 @@ body {
   left: 0;
 }
 
+@keyframes pulse-light-dark {
+  0%, 100% {
+    background-color: #f7f5f5;
+  }
+  50% {
+    background-color: #E5E5E5;
+  }
+}
+
+.pulse-light-dark {
+  animation: pulse-light-dark 5s infinite;
+}
