--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -186,3 +186,10 @@ body {
 .pulse-light-dark {
   animation: pulse-light-dark 5s infinite;
 }
+
+/* img {
+    pointer-events: none;
+    -webkit-user-drag: none;
+    user-drag: none;
+} */
+
