--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,6 +94,16 @@ body {
   }
 }
 
+img {
+  -webkit-user-drag: none;
+  user-drag: none;
+}
+
+.no-right-click {
+  -webkit-user-drag: none;
+  user-drag: none;
+}
+
 /* Hide scrollbar for Chrome, Safari, and Opera */
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
